# cinematch_app

./: docker-compose.yml
cinematch-back/: .env_example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
cinematch-back/cinematch_back/: app.py  database.py  models.py  schemas.py  security.py  service.py  settings.py
cinematch-back/cinematch_back/routers/: auth.py  movies.py  series.py  users.py
cinematch-back/migrations/: env.py
cinematch-back/migrations/versions/: 017d4949d267_create_series_table.py  23ce78c20ba7_altered_users_table_to_include_password.py  2c850ab6e049_created_movies_tables.py  43a9d5a8802f_create_users_table.py  525c8d86190f_adding_atributes_to_liked_movies_and_.py
cinematch-back/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_movies.py  test_security.py  test_users.py
cinematch-front/: .env_example  Dockerfile  README.md  TODO.txt  index.html  package-lock.json  package.json  tsconfig.json
cinematch-front/src/: App.css  App.tsx
cinematch-front/src/components/: LoginDialog.tsx  SignupDialog.tsx
cinematch-front/src/contexts/: authContext.tsx  movieContext.tsx
cinematch-front/src/icons/: UserAvatarIcon.tsx
cinematch-front/src/pages/: HomePage.tsx  PopularMovies.tsx  PopularSeries.tsx  Recommendations.tsx  UserFavorites.tsx
cinematch-front/src/routes/: index.tsx
cinematch-front/src/services/: auth.tsx  backApi.tsx  cinematch.tsx  moviesApi.tsx  seriesApi.tsx  tmdbApi.tsx
cinematch-front/src/theme/: palette.ts
cinematch-front/src/utils/: contentUtils.tsx  formUtils.tsx  types.tsx  (+2 more)
nginx/: nginx.conf
(+7 files in other folders)
