[tool.poetry]
name = "cinematch-back"
version = "0.1.0"
description = ""
authors = ["Jean Frusca <jeang96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pydantic-settings = "^2.3.3"
alembic = "^1.13.1"
pwdlib = {extras = ["argon2"], version = "^0.2.0"}
pyjwt = "^2.8.0"
freezegun = "^1.5.1"
psycopg = {extras = ["binary"], version = "^3.1.19"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.12.2"
ruff = "^0.4.8"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
testcontainers = "^4.5.1"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 79
extend-exclude = ['migrations']


[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'


[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev cinematch_back/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=cinematch_back -vv'
post_test = 'coverage html'